HREPTWO-2612: UI: Large tree will overlap harmonicas in documents tab http://issues.onehippo.com/browse/HREPTWO-2612
 - Implemented css fix from Mathijs Brand for vertical-only scrollbar in the tree
 - Added new nodeNameFormatter that makes sure nodename won't exceed the max-width of the tree (since there is no horizontal scrollbar) and takes indentation into account.
 - Changed left-click-context-menu-bullet to work with and without scrollbar
 - Fixed IE issues with context-menu size
 - Fixed context-menu folding when there isn't enough room below the clickPoint by folding upwards.
 - Made area around 'Add root folder' button a lot smaller
 

svn path=/hippo-ecm/trunk/; revision=18410

--- a/cms/package/skin/src/main/webapp/screen.css
+++ b/cms/package/skin/src/main/webapp/screen.css
@@ -417,6 +417,13 @@ color: black
 
 .hippo-toolbar-menu-item li{display: block; clear:left; margin-right: 0px; padding-top: 1px; padding-bottom: 1px;}
 
+/* This is the context-menu header */
+.hippo-toolbar-menu-item li span.header-item { display: block; padding: 2px; }
+ 
+.hippo-toolbar-menu-item li span.header-item {
+  padding-left: 30px;
+}
+
 .hippo-toolbar-menu-item-button-icon{display: block; float: left; margin-right: 11px; }
 
 .hippo-toolbar-section li.icon-16{padding-left: 0px; background-position: 3px 4px; width: 118px;}
@@ -618,9 +625,7 @@ body .hippo-picker-properties input{border: 1px solid #afafaf; padding: 4px; lin
 /* Tree Plugin */
 
 /* overriding standard wicket tree styling */
-/* remove the margin and set the hippo-tree wrapping div up as a scrollpane */
-.hippo-tree {overflow: hidden; width: 200px; height: 350px; z-index: 1;}
-.hippo-tree {overflow: visible;}
+.hippo-tree {overflow: scroll; -ms-overflow-y: auto; overflow-y: auto; -ms-overflow-x: hidden; overflow-x: hidden; width: 200px; height: 350px; z-index: 1;}
 
 /* remove margins */
 .hippo-tree div.wicket-tree{margin: 0px; border: none;}
@@ -637,11 +642,16 @@ body .hippo-picker-properties input{border: 1px solid #afafaf; padding: 4px; lin
 .hippo-tree div.wicket-tree div.row, 
 .hippo-tree div.wicket-tree div.row-selected{padding-top: 2px; padding-bottom: 2px;}
 
+.hippo-tree div.wicket-tree div.row .hippo-tree-dropdown-icon-container {background: transparent;}
+.hippo-tree div.wicket-tree div.row:hover .hippo-tree-dropdown-icon-container, 
+.hippo-tree div.wicket-tree div.row-selected:hover .hippo-tree-dropdown-icon-container {
+  background-image: url("images/controls/folder-workflow-icon.png"); 
+  background-repeat: no-repeat;
+  background-position: -1px -2px;
+}
+  
+.hippo-tree div.wicket-tree div.row-selected {background-image: url("images/controls/folder-background-selected.png"); } /*background-position: 0px -20px;}*/
 
-.hippo-tree div.wicket-tree div.row{background-image: url("images/controls/folderdropdownicon.png"); background-repeat:no-repeat; background-position: 0px 0px; }
-.hippo-tree div.wicket-tree div.row:hover{background-position: -200px 0px;}
-.hippo-tree div.wicket-tree div.row-selected {background-image: url("images/controls/folderdropdownicon.png"); background-position: 0px -20px;}
-.hippo-tree div.wicket-tree div.row-selected:hover{background-position: -200px -21px;}
 .hippo-tree div.wicket-tree div.row a,
 .hippo-tree div.wicket-tree div.row-selected a {font-weight: normal; color: black;}
 
@@ -700,7 +710,7 @@ font-weight: bold;
 .hippo-accordion-unit h2 a.focus:hover{background-position: 0px -48px}
 .hippo-accordion-unit h2 a.focus:active{background-position: 0px -72px}
 
-.hippo-accordion-unit-add { display: block; background: url("images/addfolder.png") no-repeat left bottom; padding-left: 30px; padding-bottom: 5px; padding-top: 20px; margin-bottom: 10px; text-align: left; margin-left: 5px; }
+.hippo-accordion-unit-add { display: block; background: url("images/addfolder.png") no-repeat left bottom; padding-left: 30px; padding-bottom: 5px; padding-top: 5px; margin-bottom: 10px; text-align: left; margin-left: 5px; }
 
 /* Hippo tree addition */
 
